force-app/main/default/objects/R360_Retention_Rule__mdt/R360_Retention_Rule__mdt.object-meta.xml
<CustomObject><label>Resource 360 Retention Rule</label><pluralLabel>Resource 360 Retention Rules</pluralLabel><visibility>Public</visibility></CustomObject>