force-app/main/default/objects/R360_Retention_Rule__mdt/fields/Disposition_Action__c.field-meta.xml
<CustomField><fullName>Disposition_Action__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Disposition Action</label><length>80</length><type>Text</type></CustomField>