force-app/main/default/objects/R360_Retention_Rule__mdt/fields/Evidence_Reference__c.field-meta.xml
<CustomField><fullName>Evidence_Reference__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Evidence Reference</label><length>255</length><type>Text</type></CustomField>