force-app/main/default/objects/R360_Retention_Rule__mdt/fields/Legal_Hold_Eligible__c.field-meta.xml
<CustomField><fullName>Legal_Hold_Eligible__c</fullName><defaultValue>true</defaultValue><fieldManageability>DeveloperControlled</fieldManageability><label>Legal Hold Eligible</label><type>Checkbox</type></CustomField>