force-app/main/default/objects/R360_Retention_Rule__mdt/fields/Record_Category__c.field-meta.xml
<CustomField><fullName>Record_Category__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Record Category</label><length>120</length><type>Text</type></CustomField>