force-app/main/default/objects/R360_Retention_Rule__mdt/fields/Recovery_Window_Days__c.field-meta.xml
<CustomField><fullName>Recovery_Window_Days__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Recovery Window Days</label><precision>6</precision><scale>0</scale><type>Number</type></CustomField>