force-app/main/default/objects/R360_Retention_Rule__mdt/fields/Retention_Days__c.field-meta.xml
<CustomField><fullName>Retention_Days__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Retention Days</label><precision>7</precision><scale>0</scale><type>Number</type></CustomField>